20070313
 - (dtucker) [entropy.c scard-opensc.c ssh-rand-helper.c] Bug #1294: include
   string.h to prevent warnings, from vapier at gentoo.org.

20070306
 - (djm) OpenBSD CVS Sync
   - jmc@cvs.openbsd.org 2007/03/01 16:19:33
     [sshd_config.5]
     sort the `match' keywords;
   - djm@cvs.openbsd.org 2007/03/06 10:13:14
     [version.h]
     openssh-4.6; "please" deraadt@
 - (djm) [contrib/caldera/openssh.spec contrib/redhat/openssh.spec]
   [contrib/suse/openssh.spec] crank spec files for release
 - (djm) [README] correct link to release notes
 - (djm) Release 4.6p1

20070304
 - (djm) [configure.ac] add a --without-openssl-header-check option to
   configure, as some platforms (OS X) ship OpenSSL headers whose version
   does not match that of the shipping library. ok dtucker@
 - (dtucker) [openbsd-compat/openssl-compat.h] Bug #1291: Work around a
   bug in OpenSSL 0.9.8e that prevents aes256-ctr, aes192-ctr and arcfour256
   ciphers from working correctly (disconnects with "Bad packet length"
   errors) as found by Ben Harris.  ok djm@

20070303
 - (dtucker) [regress/agent-ptrace.sh] Make ttrace gdb error a little more
   general to cover newer gdb versions on HP-UX.

20070302
 - (dtucker) [configure.ac] For Cygwin, read files in textmode (which allows
   CRLF as well as LF lineendings) and write in binary mode.  Patch from
   vinschen at redhat.com.
 - (dtucker) [INSTALL] Update to autoconf-2.61.

20070301
 - (dtucker) OpenBSD CVS Sync
   - dtucker@cvs.openbsd.org 2007/03/01 10:28:02
     [auth2.c sshd_config.5 servconf.c]
     Remove ChallengeResponseAuthentication support inside a Match
     block as its interaction with KbdInteractive makes it difficult to
     support.  Also, relocate the CR/kbdint option special-case code into
     servconf.  "please commit" djm@, ok markus@ for the relocation.
 - (tim) [buildpkg.sh.in openssh.xml.in] Clean up Solaris 10 smf(5) bits.
   "Looks sane" dtucker@

20070228
 - (dtucker) OpenBSD CVS Sync