@@ -1,6 +1,9 @@
 20070313
  - (dtucker) [entropy.c scard-opensc.c ssh-rand-helper.c] Bug #1294: include
    string.h to prevent warnings, from vapier at gentoo.org.
+ - (dtucker) [cipher-3des1.c cipher-bf1.c] The OpenSSL 0.9.8e problem in
+   bug #1291 also affects Protocol 1 3des.  While at it, use compat-openssl.h
+   in cipher-bf1.c.  Patch from Juan Gallego.
 
 20070306
  - (djm) OpenBSD CVS Sync
@@ -2820,4 +2823,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4635.2.2 2007/03/12 20:33:34 dtucker Exp $
+$Id: ChangeLog,v 1.4635.2.3 2007/03/13 07:49:31 dtucker Exp $
